<resources>
    <string name="app_name">To do</string>
    <string name="insira_o_titulo">Insira o título</string>
    <string name="insira_o_subtitulo">Insira o subtitulo</string>
    <string name="insira_o_texto">Insira o texto</string>
    <string name="data">DATA</string>
    <string name="sincronizar">sincronizar</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="listar">LISTAR</string>
    <string name="editar">editar</string>
    <string name="cancelar">cancelar</string>
    <string name="my_tasks">My Tasks</string>
    <string name="search_tasks">Search tasks</string>
    <string name="task_subtitle">Task Subtitle</string>
    <string name="type_note_here">Type note here</string>
    <string name="task_title">Task Title</string>
    <string name="taskcalendar">TaskCalendar</string>
    <string name="date">01/01/2001</string>
    <string name="subtitle_task">Subtitle task</string>
    <string name="uppercase">Uppercase</string>
    <string name="underlined">Underlined</string>
    <string name="italic">Italic</string>
    <string name="bold">Bold</string>
    <string name="create_note">Create Note from text</string>
</resources>