<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_145sdp"
    android:layout_height="@dimen/_80sdp"
    app:cardCornerRadius="30dp"
    app:cardElevation="15dp"
    android:layout_marginTop="@dimen/_12sdp"
    android:layout_marginStart="@dimen/_12sdp"
    android:layout_marginRight="@dimen/_12sdp"
    android:layout_marginLeft="@dimen/_12sdp"
    android:layout_marginEnd="@dimen/_12sdp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardBackgroundColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:animateLayoutChanges="true">

<!--        android:layout_width="400dp"-->
<!--        android:layout_height="80dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginLeft="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginRight="8dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        app:cardCornerRadius="20dp"-->
<!--        app:cardElevation="20dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_margin="10dp"-->
<!--            android:orientation="vertical">-->
        <TextView
            android:id="@+id/title"
            android:layout_width="@dimen/_145sdp"
            android:layout_height="@dimen/_16ssp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/task_title"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/taskcalendar"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/ic_calendar"
            app:tint="@color/colorPrimary"
            android:contentDescription="@string/taskcalendar"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <TextView
            android:id="@id/date"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/date"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@+id/taskcalendar"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="@+id/taskcalendar"
            app:layout_constraintTop_toBottomOf="@+id/taskcalendar"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/colorQuickActionsBackground"
            android:textColorHint="@color/colorQuickActionsBackground"
            android:hint="@string/subtitle_task"
            android:textSize="@dimen/_14ssp"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>